--- a/po/de.po
+++ b/po/de.po
@@ -11,9 +11,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: device-driver-manager\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-10-31 11:04+0100\n"
-"PO-Revision-Date: 2015-10-22 21:40+0000\n"
-"Last-Translator: pitfd <pitfd@openmailbox.org>\n"
+"POT-Creation-Date: 2015-10-31 11:22+0100\n"
+"PO-Revision-Date: 2015-10-31 10:06+0000\n"
+"Last-Translator: Arjen Balfoort <schoelje@solydxk.com>\n"
 "Language-Team: German (http://www.transifex.com/solydxk/device-driver-"
 "manager/language/de/)\n"
 "Language: de\n"
@@ -56,10 +56,6 @@ msgstr ""
 "Zum Installieren der zusätzlichen Software wird eine Internetverbindung "
 "benötigt.\n"
 "Bitte verbinden und noch einmal versuchen."
-
-#: ../usr/lib/ddm/ddm.py:170
-msgid "Use Backport"
-msgstr ""
 
 #: ../usr/lib/ddm/ddm.py:171
 msgid ""
@@ -134,7 +130,7 @@ msgid "DDM cannot purge the driver."
 msgstr "DDM kann den Treiber nicht vollständig entfernen."
 
 #: ../usr/lib/ddm/ddm.py:640
-msgid "Card is not supported."
+msgid "This card is not supported."
 msgstr ""
 
 #: ../usr/lib/ddm/ddm.py:642
