--- a/po/es.po
+++ b/po/es.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: device-driver-manager\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-10-31 11:04+0100\n"
-"PO-Revision-Date: 2015-10-26 15:27+0000\n"
-"Last-Translator: Ariel Méndez <arielmendz@gmail.com>\n"
+"POT-Creation-Date: 2015-10-31 11:22+0100\n"
+"PO-Revision-Date: 2015-10-31 10:06+0000\n"
+"Last-Translator: Arjen Balfoort <schoelje@solydxk.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/solydxk/device-driver-"
 "manager/language/es/)\n"
 "Language: es\n"
@@ -52,10 +52,6 @@ msgid ""
 msgstr ""
 "Es necesaria una conexión a internet para instalar el software adicional. "
 "Conéctese a internet e intente de nuevo."
-
-#: ../usr/lib/ddm/ddm.py:170
-msgid "Use Backport"
-msgstr ""
 
 #: ../usr/lib/ddm/ddm.py:171
 msgid ""
@@ -128,7 +124,7 @@ msgid "DDM cannot purge the driver."
 msgstr "DDM no puede purgar el driver."
 
 #: ../usr/lib/ddm/ddm.py:640
-msgid "Card is not supported."
+msgid "This card is not supported."
 msgstr ""
 
 #: ../usr/lib/ddm/ddm.py:642
