--- a/po/it.po
+++ b/po/it.po
@@ -9,9 +9,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: device-driver-manager\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-10-31 11:04+0100\n"
-"PO-Revision-Date: 2015-10-22 11:23+0000\n"
-"Last-Translator: Davide Favaro <belzebu87@gmail.com>\n"
+"POT-Creation-Date: 2015-10-31 11:22+0100\n"
+"PO-Revision-Date: 2015-10-31 10:06+0000\n"
+"Last-Translator: Arjen Balfoort <schoelje@solydxk.com>\n"
 "Language-Team: Italian (http://www.transifex.com/solydxk/device-driver-"
 "manager/language/it/)\n"
 "Language: it\n"
@@ -53,10 +53,6 @@ msgid ""
 msgstr ""
 "Una connessione internet è necessaria per installare software aggiuntivo. "
 "Connettersi ad internet e riprovare."
-
-#: ../usr/lib/ddm/ddm.py:170
-msgid "Use Backport"
-msgstr ""
 
 #: ../usr/lib/ddm/ddm.py:171
 msgid ""
@@ -131,7 +127,7 @@ msgid "DDM cannot purge the driver."
 msgstr "DDM non può rimuovere completamente il driver."
 
 #: ../usr/lib/ddm/ddm.py:640
-msgid "Card is not supported."
+msgid "This card is not supported."
 msgstr ""
 
 #: ../usr/lib/ddm/ddm.py:642
