--- a/po/el.po
+++ b/po/el.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ddm 0.8.9\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-10-31 11:04+0100\n"
+"POT-Creation-Date: 2015-10-31 11:22+0100\n"
 "PO-Revision-Date: 2013-10-03 10:45+0100\n"
 "Last-Translator: Schoelje <schoelje@solydxk.com>\n"
 "Language-Team: SolydXK <admin@solydxk.com>\n"
@@ -48,10 +48,6 @@ msgstr ""
 msgid ""
 "You need an internet connection to install the additional software.\n"
 "Please, connect to the internet and try again."
-msgstr ""
-
-#: ../usr/lib/ddm/ddm.py:170
-msgid "Use Backport"
 msgstr ""
 
 #: ../usr/lib/ddm/ddm.py:171
@@ -124,8 +120,9 @@ msgid "DDM cannot purge the driver."
 msgstr ""
 
 #: ../usr/lib/ddm/ddm.py:640
-msgid "Card is not supported."
-msgstr ""
+#, fuzzy
+msgid "This card is not supported."
+msgstr "Μη υποστηριζόμενο ATI chip: %(serie)d"
 
 #: ../usr/lib/ddm/ddm.py:642
 msgid ""
@@ -322,9 +319,6 @@ msgstr ""
 
 #~ msgid "Driver not installable: %(drv)s"
 #~ msgstr "Ο οδηγός δεν μπορεί να εγκατασταθεί: %(drv)s"
-
-#~ msgid "ATI chip serie not supported: %(serie)d"
-#~ msgstr "Μη υποστηριζόμενο ATI chip: %(serie)d"
 
 #~ msgid "No driver found for: %(card)s (%(man)s:%(serie)s)"
 #~ msgstr "Δέν βρέθηκε οδηγός: %(card)s (%(man)s:%(serie)s)"
