Get log path from /usr/bin/ddm

--- a/po/nl.po
+++ b/po/nl.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: device-driver-manager\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-10-31 17:33+0100\n"
-"PO-Revision-Date: 2015-10-31 11:33+0000\n"
+"POT-Creation-Date: 2015-10-31 17:39+0100\n"
+"PO-Revision-Date: 2015-10-31 16:39+0000\n"
 "Last-Translator: Arjen Balfoort <schoelje@solydxk.com>\n"
 "Language-Team: Dutch (http://www.transifex.com/solydxk/device-driver-manager/"
 "language/nl/)\n"
@@ -178,6 +178,11 @@ msgid ""
 "Only install proprietary drivers if you are sure you really need them.\n"
 "Usually open drivers are enough."
 msgstr ""
+"Device Driver Manager helpt om proprietary drivers te installeren voor uw "
+"hardware.\n"
+"Installeer deze drivers alleen als u er zeker van bent dat u ze echt nodig "
+"hebt.\n"
+"Over het algemeen zijn open drivers voldoende."
 
 #: ../usr/lib/ddm/main.py:51
 msgid ""
