--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ddm (2.2.1) debian; urgency=low
+
+  * Improved language detection of localized HTML files
+
+ -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Fri, 20 Nov 2015 13:00:00 +0100
+
 ddm (2.2.0) debian; urgency=low
 
   * Added support for Radeon R and FirePro/Gl series
